#Project 1 Design_the_card.html

--- a/Design_the_card.html
+++ b/Design_the_card.html
@@ -52,3 +52,91 @@
       color: rgb(51, 143, 255);
       font-size: 13px;
       font-weight: bold;
+      border: none;
+      background-color: rgb(219, 236, 255);
+    }
+    .button button: hover{
+      background-color: white;
+    }
+    }
+    
+    *{
+      margin: 0;
+      padding: 0;
+    }
+    body{
+      background-color: gray;
+    }
+    .card{
+      background-color: white;
+      width: 100vw;
+      height: 70vh;
+      border-radius: 15px;
+    }
+    img{
+      border-radius: 15px;
+      margin: 25px;
+      width: 95vw;
+    }
+    .capsules{
+      padding: 5px 20px;
+    }
+    .capsules span{
+      border: 1px solid gray;
+      border-radius: 17px;
+      padding: 5px 9px;
+      color: gray;
+      margin: 10px 5px 10px 20px;
+      box-sizing: border-box;
+    }
+    .content{
+      padding: 30px 35px;
+      line-height: 1.5;
+    }
+    .content h2{
+      font-color: gray;
+    }
+    .content p{
+      font-size: 17px;
+      font-color: gray;
+      padding: 10px 0px;
+    }
+    .button{
+      text-align: center;
+    }
+    .button button{
+      padding: 12px 20px 12px 20px;
+      border-radius: 19px;
+      color: rgb(51, 143, 255);
+      font-size: 13px;
+      font-weight: bold;
+      border: none;
+      background-color: rgb(219, 236, 255);
+    }
+    .button button: hover{
+      background-color: white;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="card">
+  <div>
+    <img src="https://images.pexels.com/photos/448714/pexels-photo-448714.jpeg?cs=srgb&dl=pexels-eberhard-grossgasteiger-448714.jpg&fm=jpg" alt="Nature"/>
+  </div>
+    <div class="capsules">
+      <span>Nature</span>
+      <span>Lake</span>
+    </div>
+    <div class="content">
+      <h2>Design by Surya</h2>
+      <p>Welcome to my project friends !
+      Here I design the card Sure to checkout my github profile for social links you can follow & support me........</p>
+    </div>
+    <div class="button">
+      <button>Read More</button>
+    </div>
+  </div>
+</body>
+
+</html>
