--- a/Design_the_card.html
+++ b/Design_the_card.html
@@ -6,60 +6,6 @@
   <meta name="viewport" content="width=device-width">
   <title>Css card design</title>
   <style>
-    @media only screen and (min-width: 400px) {
-      *{
-      margin: 0;
-      padding: 0;
-    }
-    body{
-      background-color: gray;
-    }
-    .card{
-      background-color: white;
-      width: 100vw;
-      height: 70vh;
-      border-radius: 15px;
-    }
-    img{
-      width: 80vw;
-      border-radius: 15px;
-      margin: 100px;
-    }
-    .capsules span{
-      border: 1px solid gray;
-      border-radius: 17px;
-      padding: 5px 9px 5px 9px;
-      margin: 10px;
-      color: gray;
-    }
-    .content{
-      padding: 40px;
-    }
-    .content h2{
-      font-color: gray;
-      font-size: 60px;
-    }
-    .content{
-      font-size: 100px;
-      font-color: gray;
-    }
-    .button{
-      text-align: center;
-    }
-    .button button{
-      padding: 12px 20px 12px 20px;
-      border-radius: 19px;
-      color: rgb(51, 143, 255);
-      font-size: 13px;
-      font-weight: bold;
-      border: none;
-      background-color: rgb(219, 236, 255);
-    }
-    .button button: hover{
-      background-color: white;
-    }
-    }
-    
     *{
       margin: 0;
       padding: 0;
@@ -70,8 +16,9 @@
     .card{
       background-color: white;
       width: 100vw;
-      height: 70vh;
-      border-radius: 15px;
+      height: 65vh;
+      border-radius: 40px;
+      margin: auto;
     }
     img{
       border-radius: 15px;
@@ -79,59 +26,121 @@
       width: 95vw;
     }
     .capsules{
-      padding: 5px 20px;
+      padding: 15px 25px;
     }
     .capsules span{
-      border: 1px solid gray;
-      border-radius: 17px;
-      padding: 5px 9px;
+      font-size: 40px;
+      border: 3px solid gray;
+      border-radius: 40px;
+      padding: 12px 20px;
       color: gray;
-      margin: 10px 5px 10px 20px;
-      box-sizing: border-box;
+      margin: 20px 10px 20px 30px;
     }
     .content{
       padding: 30px 35px;
       line-height: 1.5;
     }
     .content h2{
-      font-color: gray;
+      color: rgb(64, 64, 64);
+      font-size: 60px;
     }
     .content p{
-      font-size: 17px;
-      font-color: gray;
+      font-size: 40px;
+      color: gray;
       padding: 10px 0px;
     }
     .button{
       text-align: center;
     }
     .button button{
-      padding: 12px 20px 12px 20px;
-      border-radius: 19px;
+      padding: 27px 35px;
+      border-radius: 40px;
       color: rgb(51, 143, 255);
-      font-size: 13px;
+      font-size: 30px;
       font-weight: bold;
       border: none;
       background-color: rgb(219, 236, 255);
     }
-    .button button: hover{
+    .button button:hover{
       background-color: white;
+    }
+
+
+    @media only screen and (max-width: 455px) {
+      *{
+        margin: 0;
+        padding: 0;
+      }
+      body{
+        background-color: gray;
+      }
+      .card{
+        background-color: white;
+        width: 95vw;
+        height: 80vh;
+        border-radius: 15px;
+        margin: auto;
+      }
+      img{
+        width: 352px;
+        border-radius: 15px;
+        margin: 10px;
+      }
+      .capsules{
+      padding: 6px 10px;
+    }
+    .capsules span{
+      font-size: 15px;
+      border: 2px solid gray;
+      border-radius: 20px;
+      padding: 6px 10px;
+      color: gray;
+      margin: 12px;
+    }
+
+      .content{
+        padding: 16px;
+        line-height: 1.5;
+      }
+      .content h2{
+        color: rgb(64, 64, 64);
+        font-size: 40px;
+      }
+      .content p{
+        font-size: 20px;
+        color: gray;
+      }
+      .button{
+        text-align: center;
+      }
+      .button button{
+        padding: 12px 20px;
+        border-radius: 19px;
+        color: rgb(51, 143, 255);
+        font-size: 13px;
+        font-weight: bold;
+        border: none;
+        background-color: rgb(219, 236, 255);
+      }
+      .button button:hover{
+        background-color: white;
+      }
     }
   </style>
 </head>
 
 <body>
   <div class="card">
-  <div>
-    <img src="https://images.pexels.com/photos/448714/pexels-photo-448714.jpeg?cs=srgb&dl=pexels-eberhard-grossgasteiger-448714.jpg&fm=jpg" alt="Nature"/>
-  </div>
+    <div>
+      <img src="https://images.pexels.com/photos/448714/pexels-photo-448714.jpeg?cs=srgb&dl=pexels-eberhard-grossgasteiger-448714.jpg&fm=jpg" alt="Nature"/>
+    </div>
     <div class="capsules">
       <span>Nature</span>
       <span>Lake</span>
     </div>
     <div class="content">
       <h2>Design by Surya</h2>
-      <p>Welcome to my project friends !
-      Here I design the card Sure to checkout my github profile for social links you can follow & support me........</p>
+      <p>Welcome to my project friends ! Here I design the card. Be sure to checkout my GitHub profile for social links you can follow & support me...</p>
     </div>
     <div class="button">
       <button>Read More</button>
